# ollikit

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/ollikit/: __about__.py  __init__.py  concentration_solver.py  unit_conversion.py
src/ollikit/model_data/: vect_layer.pkl
src/ollikit/oligama/: complex_concentration_minimal.py  data_loaders.py  exceptions.py  main.py  nn_utils.py  utils.py
src/ollikit/oligama/helpers/microrna/: human.py
src/ollikit/oligama/predictors/: affinity_predictors.py  hairpin_predictors.py
src/ollikit/oligama/scripts/: affinity_matrix.py  affinity_matrix.py_old  complement.py  complex_solver.py  concentration_solver.py  gene_olig_finder.py  microrna_finder.py  olig_finder.py  random_initializer.py
test_output/test_affmatrix/: Affinity_matrix.xlsx
test_output/test_affmatrix_microrna/: Log.txt
test_output/test_complement/: Complement_table_output.xlsx
tests/: test_complex_solver.py  test_concentration_solver.py  test_nupack_predictors.py  test_olig_finder.py  test_primary_concentration_solver.py  test_unit_conversion.py
tests_oligama/: test_affmatrix.py  test_affmatrix_microrna.py  test_complement.py  test_complex.py  test_conc.py  test_conc_visual.py  test_finder.py  test_gene.py  test_microrna.py  test_nupack.py  test_predict.py
tests_oligama/test_output/test_affmatrix/: Affinity_matrix.xlsx
tests_oligama/test_output/test_complement/: Complement_table_output.xlsx
