[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ollikit"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Mikhail", email = "725156@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Mikhail/ollikit#readme"
Issues = "https://github.com/Mikhail/ollikit/issues"
Source = "https://github.com/Mikhail/ollikit"

[tool.hatch.version]
path = "src/ollikit/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/ollikit tests}"

[tool.coverage.run]
source_pkgs = ["ollikit", "tests"]
branch = true
parallel = true
omit = [
  "src/ollikit/__about__.py",
]

[tool.coverage.paths]
ollikit = ["src/ollikit", "*/ollikit/src/ollikit"]
tests = ["tests", "*/ollikit/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
