[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ollikit"
dynamic = ["version"]
description = ''
readme = "README.md"

license = "MIT"
keywords = []
authors = [
  { name = "nikitinlab", email = "725156@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">=3.9"

dependencies = [
  #"nupack~=4.0",   # ядро
  "numpy>=1.25",
  "pandas>=2.0",
  "matplotlib>=3.9",
  "biopython>=1.83",
  "numba",
  "seaborn",
  "joblib",
  "tensorflow",
  "xlsxwriter"
]

[project.urls]
Documentation = "https://github.com/nikitinlab/ollikit#readme"
Issues = "https://github.com/nikitinlab/ollikit/issues"
Source = "https://github.com/nikitinlab/ollikit"

[tool.hatch.version]
path = "src/ollikit/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/ollikit tests}"

[tool.coverage.run]
source_pkgs = ["ollikit", "tests"]
branch = true
parallel = true
omit = [
  "src/ollikit/__about__.py",
]

[tool.coverage.paths]
ollikit = ["src/ollikit", "*/ollikit/src/ollikit"]
tests = ["tests", "*/ollikit/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
